--- a/scss/components/footer.scss
+++ b/scss/components/footer.scss
@@ -136,13 +136,15 @@
       text-align: center;
       font-size: 1.5rem;
       display: block;
-      padding: 0.33rem 0.45rem;
       float: left;
       margin: 0 0.25rem 0.25rem 0;
       &:hover,&:active,&:focus{
         outline: none;
         text-decoration: none;
       }
+		&:before{
+			line-height: 2.25rem;
+		}
 		@each $network, $color in $social-networks {
 			&.kf-#{$network}{
 				background-color: $color;
